# adafruit-bluetooth-keyboard

./: .pre-commit-config.yaml  README.md  pyproject.toml
adafruit_bluetooth_keyboard/: adafruit_bluetooth_le.py  main.py  raw_input_reader.py
